tests/external_image_registry/manifests/invalid-pod-external-images.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-pod-external-images
  namespace: check-kyverno
spec:
  containers:
  - name: my-container
    image: "external-registry.com/external-image:latest"
  initContainers:
  - name: init-container
    image: "external-registry.com/external-image:latest"
    # image: "602401143452.dkr.ecr.eu-central-1.amazonaws.com/external-init-image:latest"
