tests/external_image_registry/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-external-images-test
policies:
  - ../../policies/02-disallow-external-images.yaml
resources:
  - manifests/valid-pod-internal-images.yaml
  - manifests/invalid-pod-external-images.yaml
results:
  - policy: disallow-external-images
    rule: validate-container-image-repositories
    resources:
      - check-kyverno/valid-pod-internal-images
    kind: Pod
    result: pass
  - policy: disallow-external-images
    rule: validate-initcontainer-image-repositories
    resources:
      - check-kyverno/valid-pod-internal-images
    kind: Pod
    result: pass
  - policy: disallow-external-images
    rule: validate-container-image-repositories
    resources:
      - check-kyverno/invalid-pod-external-images
    kind: Pod
    result: fail
  - policy: disallow-external-images
    rule: validate-initcontainer-image-repositories
    resources:
      - check-kyverno/invalid-pod-external-images
    kind: Pod
    result: fail
